# Student-Grades-Checker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gui/: addcoursedialog.cpp  addcoursedialog.h  addcoursedialog.ui  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  assignlecturerdialog.cpp  assignlecturerdialog.h  assignlecturerdialog.ui  courses.ui  deletestudentdialog.cpp  deletestudentdialog.h  deletestudentdialog.ui  inputgradedialog.cpp  inputgradedialog.h  inputgradedialog.ui  instructor.cpp  instructor.h  instructor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchstudentdialog.cpp  searchstudentdialog.h  searchstudentdialog.ui  studentDashboard.cpp  studentDashboard.ui  studentdashboard.h  studentlogindialog.cpp  studentlogindialog.h  studentlogindialog.ui  studenttab.ui  updatestudentdialog.cpp  updatestudentdialog.h  updatestudentdialog.ui
src/: Course.cpp  Course.hpp  GradeManager.cpp  GradeManager.hpp  Lecturer.cpp  Lecturer.hpp  Student.cpp  Student.hpp  Types.hpp
