cmake_minimum_required(VERSION 3.16)

project(StudentGradeChecker VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

# --- UPDATED PROJECT SOURCES ---
set(PROJECT_SOURCES
        main.cpp

        # GUI Files
        gui/mainwindow.cpp
        gui/mainwindow.h
        gui/mainwindow.ui

        gui/addcoursedialog.cpp
        gui/addcoursedialog.h
        gui/addcoursedialog.ui

        gui/assignlecturerdialog.cpp
        gui/assignlecturerdialog.h
        gui/assignlecturerdialog.ui

        gui/inputgradedialog.cpp
        gui/inputgradedialog.h
        gui/inputgradedialog.ui

        # Source Files (Headers and Implementations)
        src/Course.hpp
        src/Course.cpp
        src/GradeManager.hpp
        src/GradeManager.cpp
        src/Lecturer.hpp
        src/Lecturer.cpp
        src/Student.hpp
        src/Student.cpp
        src/Types.hpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(StudentGradeChecker
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        gui/instructor.h gui/instructor.cpp gui/instructor.ui
        gui/courses.ui
        gui/studentlogindialog.h gui/studentlogindialog.cpp gui/studentlogindialog.ui
        gui/addstudentdialog.h gui/addstudentdialog.cpp gui/addstudentdialog.ui
        gui/updatestudentdialog.h gui/updatestudentdialog.cpp gui/updatestudentdialog.ui
        gui/deletestudentdialog.h gui/deletestudentdialog.cpp gui/deletestudentdialog.ui
        gui/searchstudentdialog.h gui/searchstudentdialog.cpp gui/searchstudentdialog.ui
        gui/studentdashboard.h gui/studentdashboard.cpp gui/studentdashboard.ui



    )
# Define target properties for Android with Qt 6 as:
#   set_property(TARGET StudentGradeChecker APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(StudentGradeChecker SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#   set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(StudentGradeChecker
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(StudentGradeChecker PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_include_directories(StudentGradeChecker PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/gui
)
# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.StudentGradeChecker)
endif()
set_target_properties(StudentGradeChecker PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS StudentGradeChecker
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(StudentGradeChecker)
endif()